<resources>
    <string name="app_name">Internote</string>
    <string name="logout">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="textView_listItem_title">Title</string>
    <string name="textView_listItem_lastEdited">Last Edited</string>
    <string name="note_title_filler">Note title</string>
    <string name="date_text_filler">hh:mm dd-mm-yy</string>
    <string name="note_text_content_filler">Write your notes here :)</string>
    <string name="imageView_listItem_contentDescription">Thumbnail for image notes</string>
    <string name="aboutUs_textView_applicationInfo">This application is made as a student project in the course Android Programming at Østfold University College.</string>
    <string name="aboutUs_textView_contactInfo">Contact</string>
    <string name="aboutUs_textView_jorgenInfo">Jørgen Alexander Sæter: jorgen.a.sater@hiof.no</string>
    <string name="aboutUs_textView_mariusInfo">Marius Rogndalen Karlsen: marius.r.karlsen@hiof.no</string>
    <string name="delete_note">Delete note</string>
    <string name="back_to_main">Back to Main</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_logout">logout</string>
    <string name="contentDescription_noteImageActivity_note_image">Note image</string>
    <string name="convert_to_image_note">Convert to Image Note</string>
    <string name="contentDescription_activity_note_image_btnBackToMain">Click to go back to main</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="sound">Sound</string>
    <string name="textView_no_internet">This application requires an internet connection</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="settings_sort_notes">Sort notes Descending</string>
</resources>
